After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 594507 - doesn't notice if share goes away
doesn't notice if share goes away
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: webdav backend
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2009-09-08 14:52 UTC by Matthias Clasen
Modified: 2014-08-25 09:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dav: Force unmount when dns-sd data changes (893 bytes, patch)
2014-07-04 19:08 UTC, Ross Lagerwall
committed Details | Review

Description Matthias Clasen 2009-09-08 14:52:01 UTC
I had a dav share mounted (exported via gnome-user-share). When I stopped sharing it on the remote side I expected it to disappear, but it doesn't. 

I still see 'mclasen's public files on planemask' in network:// even though it doesn't show up in avahi-browse -a anymore, and the mount for that share does not go away either. 

Of course, clicking on either just times out now...
Comment 1 Ross Lagerwall 2014-07-04 19:08:46 UTC
Created attachment 279929 [details] [review]
dav: Force unmount when dns-sd data changes

Force unmount the backend when the resolved data changes (most likely
when the remote service disappears).
Comment 2 Ross Lagerwall 2014-07-04 19:10:11 UTC
The above patch fixes the problem for an existing mount.  It appears that the network:/// behavior has been fixed already; the dav mount disappears as soon as the service is shut down.
Comment 3 Ondrej Holy 2014-08-21 18:51:47 UTC
Review of attachment 279929 [details] [review]:

It makes sense to me, however are all the possible changes problematic? Wouldn't be better to unmount only if e.g. is-resolved is false?
Comment 4 Ross Lagerwall 2014-08-22 07:15:10 UTC
(In reply to comment #3)
> Review of attachment 279929 [details] [review]:
> 
> It makes sense to me, however are all the possible changes problematic?
> Wouldn't be better to unmount only if e.g. is-resolved is false?

From what I can see, the possible changes are:
Address
Port
txt-records (looks like it might contain extra data such as a path or username)
is-resolved

Handling a change in any of this information while the share is in use could be tricky so I think the safest/easiest thing to do is to just do a clean shutdown.
Comment 5 Ondrej Holy 2014-08-22 08:55:55 UTC
Comment on attachment 279929 [details] [review]
dav: Force unmount when dns-sd data changes

I think it so, but just asking :-)

(Maybe it would be good to comment this possibility in a code...)
Comment 6 Ross Lagerwall 2014-08-25 09:18:18 UTC
Pushed to master as 367053db51e84c81c21fafd3d7476be8ff2301ce (with a comment). Thanks for the review!