dav: Force unmount when dns-sd data changes

Force unmount the backend when the resolved data changes (most likely
when the remote service disappears).

https://bugzilla.gnome.org/show_bug.cgi?id=594507